# Luxtock

./: .gitignore  AGENTS.md  CLAUDE.md  Luxtock.bat  README.md  pyproject.toml
.claude/commands/: lux-analyze.md  lux-audit-thesis.md  lux-discover.md  lux-retrospect.md  lux-scan.md
examples/: watchlist.json
examples/analyses/ON/: 2026-07-02.md
examples/theses/: ev-adoption.md
framework/: methodology.md  operating-contract.md  quant.md
framework/playbooks/: analyze.md  audit-thesis.md  discover.md  retrospect.md  run.md  scan.md
luxtock/: __init__.py  __main__.py  calibrate.py  check.py  cli.py  export.py  history.py  quant.py  quotes.py  refresh.py  report.py  store.py
luxtock/web/: app.js  index.html  style.css
stocklux/: __init__.py  calibrate.py  cli.py  export.py  flows.py  portfolio.py  quant.py  quotes.py  refresh.py  report.py  server.py  store.py
stocklux/web/: app.js  index.html  style.css
tests/: conftest.py  test_calibrate.py  test_check.py  test_cli.py  test_export.py  test_flows.py  test_history.py  test_portfolio.py  test_quant.py  test_quotes.py  test_report.py  test_server.py  test_store.py
